--- a/DevOps/NodeRED/CustomLibraries/package.json
+++ b/DevOps/NodeRED/CustomLibraries/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "geodesy-innovent",
+  "name": "geodesy",
   "version": "0.1.1",
   "description": "This library finds the destination point for a given distance and initial bearing on an ellipsoidal model earth.",
   "node-red": {
     "nodes": {
-      "geodesy-innovent": "latlon-ellips-spherical.js",
-      "vincenty-innovent": "latlon-ellips-vincenty.js",
-      "bearing-innovent": "distance-bearing-vincenty.js",
-      "distance-innovent": "distance-spherical.js"
+      "geodesy": "latlon-ellips-spherical.js",
+      "vincenty": "latlon-ellips-vincenty.js",
+      "bearing": "distance-bearing-vincenty.js",
+      "distance": "distance-spherical.js"
     }
   },
   "scripts": {
